Bug 216574 - The datawizard no longer lists field names
Summary: The datawizard no longer lists field names
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.0
Platform: unspecified Linux
: NOR normal
Target Milestone: 2.0.0
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-28 23:28 UTC by Nicolas Brisset
Modified: 2010-11-12 10:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Brisset 2009-11-28 23:28:15 UTC
Version:           2.0.0_devel (using unspecified)
Compiler:          gcc 4.4.1 
OS:                Linux

It seems one of the recent commits (presumably updates work) broke the datawizard: field names are no longer listed in the second page!
Comment 1 Nicolas Brisset 2009-11-29 23:05:26 UTC
With commit #1055898 now I see field names, but only if the default config for this file is right. If I click the "Configure..." button, change settings and click OK in the settings page, I still don't see the field names in the second page.
Comment 2 Netterfield 2009-12-15 16:02:06 UTC
SVN commit 1062654 by netterfield:

BUG: 216574

Fix config widget/datawizard interaction.



 M  +1 -1      ascii.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1062654
Comment 3 Peter Kümmel 2010-08-14 12:14:21 UTC
Change version from 2.0.0_devel to 2.0.0 to simplify version numbering.
Comment 4 Peter Kümmel 2010-11-12 10:42:09 UTC
These bugs are solved with 2.0.0