BUG: 216574

Fix config widget/datawizard interaction.



git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1062654 283d02a7-25f6-0310-bc7c-ecb5cbfe19da